--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -562,129 +566,52 @@ video {
   position: relative;
 }
 
-.inset-x-0 {
-  left: 0px;
-  right: 0px;
-}
-
-.-left-48 {
-  left: -12rem;
-}
-
-.-top-\[24rem\] {
-  top: -24rem;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-full {
-  top: 100%;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-8 {
-  left: 2rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.-left-0 {
-  left: -0px;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.-right-0 {
-  right: -0px;
-}
-
-.-right-8 {
-  right: -2rem;
-}
-
-.bottom-7 {
-  bottom: 1.75rem;
-}
-
-.-right-48 {
-  right: -12rem;
-}
-
-.-right-56 {
-  right: -14rem;
-}
-
-.-bottom-0 {
-  bottom: -0px;
-}
-
-.-bottom-24 {
-  bottom: -6rem;
-}
-
-.-bottom-48 {
-  bottom: -12rem;
-}
-
-.-bottom-72 {
-  bottom: -18rem;
-}
-
-.-bottom-7 {
-  bottom: -1.75rem;
-}
-
-.-bottom-80 {
-  bottom: -20rem;
+.-bottom-32 {
+  bottom: -8rem;
 }
 
 .-bottom-96 {
   bottom: -24rem;
 }
 
-.-left-4 {
-  left: -1rem;
-}
-
-.-left-14 {
-  left: -3.5rem;
-}
-
-.-left-1 {
-  left: -0.25rem;
-}
-
-.-left-12 {
-  left: -3rem;
-}
-
 .-left-16 {
   left: -4rem;
 }
 
+.-left-48 {
+  left: -12rem;
+}
+
+.-right-56 {
+  right: -14rem;
+}
+
+.-top-\[24rem\] {
+  top: -24rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.top-full {
+  top: 100%;
+}
+
 .-z-10 {
   z-index: -10;
-}
-
-.-z-20 {
-  z-index: -20;
-}
-
-.z-0 {
-  z-index: 0;
 }
 
 .z-10 {
@@ -693,6 +620,14 @@ video {
 
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[15\] {
+  z-index: 15;
 }
 
 .m-auto {
@@ -704,21 +639,8 @@ video {
   margin-right: auto;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
 .ml-10 {
   margin-left: 2.5rem;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .flex {
@@ -729,8 +651,16 @@ video {
   display: inline-flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.aspect-auto {
+  aspect-ratio: auto;
 }
 
 .size-\[32rem\] {
@@ -738,17 +668,24 @@ video {
   height: 32rem;
 }
 
-.size-\[34rem\] {
-  width: 34rem;
-  height: 34rem;
+.h-16 {
+  height: 4rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-5\/6 {
+  height: 83.333333%;
 }
 
 .h-8 {
   height: 2rem;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-\[36rem\] {
+  height: 36rem;
 }
 
 .h-full {
@@ -759,56 +696,28 @@ video {
   height: 100vh;
 }
 
-.h-52 {
-  height: 13rem;
+.h-9 {
+  height: 2.25rem;
 }
 
 .h-96 {
   height: 24rem;
 }
 
-.h-auto {
-  height: auto;
+.h-\[1000px\] {
+  height: 1000px;
 }
 
-.h-3\/6 {
-  height: 50%;
+.h-\[3rem\] {
+  height: 3rem;
 }
 
-.h-2\/5 {
-  height: 40%;
+.h-\[37rem\] {
+  height: 37rem;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-\[50vh\] {
-  height: 50vh;
-}
-
-.h-1 {
-  height: 0.25rem;
+.w-44 {
+  width: 11rem;
 }
 
 .w-8 {
@@ -819,28 +728,8 @@ video {
   width: 100%;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
 .max-w-7xl {
   max-width: 80rem;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[600px\] {
-  max-width: 600px;
 }
 
 .max-w-\[800px\] {
@@ -849,6 +738,19 @@ video {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -871,6 +773,10 @@ video {
   justify-content: space-around;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -891,6 +797,10 @@ video {
   overflow: hidden;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -903,42 +813,23 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.border {
+  border-width: 1px;
 }
 
-.bg-\[\#E9C033\] {
+.border-customGreen {
+  --tw-border-opacity: 1;
+  border-color: rgb(53 93 61 / var(--tw-border-opacity));
+}
+
+.bg-\[\#f8f3e9\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(233 192 51 / var(--tw-bg-opacity));
+  background-color: rgb(248 243 233 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#E9D133\] {
+.bg-customGreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(233 209 51 / var(--tw-bg-opacity));
-}
-
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
-}
-
-.bg-purple-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
-}
-
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  background-color: rgb(53 93 61 / var(--tw-bg-opacity));
 }
 
 .bg-green-500 {
@@ -946,22 +837,31 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-primaryYellow {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(233 192 51 / var(--tw-bg-opacity));
 }
 
-.bg-zinc-600 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-kids {
-  background-image: url('/src/images/criancas.jpg');
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-background3 {
+  background-image: url('/src/images/background3.svg');
 }
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .bg-no-repeat {
@@ -972,12 +872,12 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-4 {
@@ -990,19 +890,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .py-5 {
@@ -1010,22 +905,18 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .text-center {
   text-align: center;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-lg {
@@ -1033,16 +924,26 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
-.text-\[\#467448\] {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(70 116 72 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-\[\#E9C033\] {
+.text-customGreen {
+  --tw-text-opacity: 1;
+  color: rgb(53 93 61 / var(--tw-text-opacity));
+}
+
+.text-primaryYellow {
   --tw-text-opacity: 1;
   color: rgb(233 192 51 / var(--tw-text-opacity));
 }
@@ -1052,15 +953,43 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.hover\:text-customGreenHover:hover {
+  --tw-text-opacity: 1;
+  color: rgb(22 38 26 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1068,11 +997,23 @@ video {
   outline-offset: 2px;
 }
 
-@media (min-width: 1024px) {
-  .lg\:block {
-    display: block;
+@media (min-width: 768px) {
+  .md\:w-24 {
+    width: 6rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 1024px) {
   .lg\:flex {
     display: flex;
   }
@@ -1081,33 +1022,16 @@ video {
     display: none;
   }
 
-  .lg\:items-start {
-    align-items: flex-start;
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:items-center {
     align-items: center;
   }
 
-  .lg\:justify-start {
-    justify-content: flex-start;
-  }
-
   .lg\:justify-center {
     justify-content: center;
-  }
-
-  .lg\:pt-2 {
-    padding-top: 0.5rem;
-  }
-
-  .lg\:pt-16 {
-    padding-top: 4rem;
-  }
-
-  .lg\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .lg\:text-2xl {
@@ -1115,3 +1039,30 @@ video {
     line-height: 2rem;
   }
 }
+
+@media (min-width: 1280px) {
+  .xl\:-top-36 {
+    top: -9rem;
+  }
+
+  .xl\:left-0 {
+    left: 0px;
+  }
+
+  .xl\:right-0 {
+    right: 0px;
+  }
+
+  .xl\:top-24 {
+    top: 6rem;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+}
+  
